off section completed

--- a/style.css
+++ b/style.css
@@ -1,65 +1,115 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-  font-family: 'Merriweather', serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 /* banner section styles starts here */
 .banner-container {
-    /* border: 2px solid red; */
-
-    width: 1320px;
-    height: 600px;
-    /* margin-left: 140px;
+  /* border: 2px solid red; */
+  border-radius: 12px;
+  max-width: 1320px;
+  min-height: 600px;
+  /* margin-left: 140px;
     margin-right: 140px; */
-    margin: 0 auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-
-    /* background image adding styles */
-    background-image: url("./assets/banner-image.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    
-    background-color: rgba(0.9, 0.9, 0.9, 0.5);
-    background-blend-mode: overlay;
-
-    /* how to bring something in middle */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; 
+  margin: 0 auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  /* background image adding styles */
+  background-image: url("./assets/banner-image.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgba(0.9, 0.9, 0.9, 0.5);
+  background-blend-mode: overlay;
+  /* how to bring something in middle */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .banner-content {
-    color: white;
-    width: 632px;
-    height: 246px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; 
-
-    text-align: center;
+  color: white;
+  width: 632px;
+  height: 246px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .banner-content p {
-    font-size: 32px;
-    font-weight: 400;
-    margin-bottom: 16px;
+  font-family: "Merriweather";
+  font-size: 32px;
+  font-weight: 400;
+  margin-bottom: 16px;
 }
 
 .banner-content h1 {
-    font-size: 72px;
-    font-weight: 900;
-    line-height: 95px;
+  font-family: "Merriweather";
+  font-size: 72px;
+  font-weight: 900;
+  line-height: 95px;
+}
+/* banner section styles ends here */
+
+/* OFF section styles starts here */
+.off-container {
+  /* border: 2px solid red; */
+  max-width: 802.9px;
+  min-height: 806px;
+  /* margin-left: 399px;
+  margin-right: 398.1px; */
+  margin: 0 auto;
+  margin-top: 120px;
+  margin-bottom: 120px;
 }
 
+.off-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.off-content h2 {
+  color: rgb(255, 0, 0);
+  font-family: "Inter";
+  font-size: 88px;
+  font-weight: 700;
+  line-height: 107px;
+  letter-spacing: 0%;
+  margin-bottom: 48px;
+}
+
+.off-content p {
+  color: rgb(255, 0, 0);
+  font-family: "Inter";
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 29px;
+  letter-spacing: 0%;
+  margin-bottom: 16px;
+}
+
+.off-content h3 {
+  color: rgb(7, 2, 17);
+  font-family: "Inter";
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58px;
+  letter-spacing: 0%;
+  margin-bottom: 48px;
+}
+
+.off-content-image {
+  width: 802.9px;
+  height: 500px;
+}
+
+/* OFF section styles starts here */
