--- a/style.css
+++ b/style.css
@@ -191,9 +191,62 @@
 }
 
 .midnight-party-right-content img {
-  width: 349.16px;
-  height: 464.65px;
-  margin-left: 40px;
+  width: 450px;
+  height: 484.65px;
+  margin-left: 50px;
   background: transparent;
 }
 /* midnight party section styles ends here */
+
+/* event section styles starts here  */
+.event-container {
+  border: 2px solid red;
+  border-radius: 16px;
+  max-width: 1320px;
+  min-height: 482px;
+  background: linear-gradient(180deg, rgba(255, 0, 0, 0.1), rgba(255, 0, 0, 0) 100%);
+  margin: 0 auto;
+  margin-bottom: 120px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.event-content {
+  width: 549px;
+  height: 168px;
+  margin-bottom: 48px;
+}
+
+.event-container p {
+  font-family: "Inter";
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 56px;
+  letter-spacing: 0%;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+.event-container button {
+  width: 167px;
+  height: 56px;
+  border-radius: 8px;
+  border: none;
+  background: rgb(255, 0, 0);
+  color: rgb(255, 255, 255);
+  font-family: "Inter";
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0%;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.event-label {
+  color: red;
+}
+/* event section styles ends here  */
