--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@
 
 /* event section styles starts here  */
 .event-container {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   border-radius: 16px;
   max-width: 1320px;
   min-height: 482px;
@@ -250,3 +250,127 @@
   color: red;
 }
 /* event section styles ends here  */
+
+/* best-offer section style starts here  */
+.best-offer-container {
+  max-width: 1320px;
+  height: 463px;
+  margin: 0 auto;
+  margin-bottom: 120px;
+}
+
+.best-offer-content {
+  width: 100%;
+  height: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.best-offer-left-content {
+  width: 33.33%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right: 70px;
+}
+
+.best-offer-left-content p {
+  width: 207px;
+  height: 29px;
+  color: rgb(255, 0, 0);
+  font-family: "Inter";
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 29px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: uppercase;
+  margin-bottom: 16px;
+}
+
+.best-offer-left-content h4 {
+  width: 328px;
+  height: 60px;
+  color: rgb(7, 2, 17);
+  font-family: "Merriweather";
+  font-size: 48px;
+  font-weight: 900;
+  line-height: 60px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+  margin-bottom: 22px;
+}
+
+.best-offer-left-content span {
+  width: 393px;
+  height: 128px;
+  color: rgba(7, 2, 17, 0.6);
+  font-family: "Inter";
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+
+.best-offer-middle-content {
+  width: 33.33%;
+  height: 100%;
+  border: 15px solid red;
+  border-radius: 50%;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+}
+
+.best-offer-middle-content img {
+  width: 100%;
+  height: 100%;
+  padding: 50px;
+}
+
+.best-offer-right-content {
+  width: 33.33%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.best-offer-right-content h4 {
+  width: 126px;
+  height: 58px;
+  color: rgb(255, 0, 0);
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58px;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-bottom: 16px;
+  margin-left: 120px;
+}
+
+.best-offer-right-content p {
+  width: 276px;
+  height: 96px;
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-bottom: 40px;
+  margin-left: 120px;
+}
+
+.best-offer-right-content img {
+  width: 140px;
+  height: 140px;
+  margin-left: 120px;
+}
+/* best-offer section style ends here  */
